# dial

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  README.org  TODO.org  flake.nix  shell.nix
dial/: Cargo.toml  ast.rs  builtin.rs  env.rs  eval.rs  lib.rs  parse.rs  sexpr.rs
dial-core/: Cargo.toml
dial-core/src/: env.rs  interp.rs  lib.rs  val.rs
parse/: Cargo.toml
src/: ast.rs  core.rs  env.rs  func.rs  grammar.pest  interpreter.rs  lib.rs  main.rs  parse.rs  parser.rs  ratio.rs  repl.rs  values.rs
src/environment/: core.rs  env.rs  math.rs  mod.rs
std/: Cargo.toml  core.dial
