[package]
name = "dial"
version = "0.1.0"
authors = ["Ryan Faulhaber <faulhaberryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.2"
rustyline = "6.2.0"
thiserror = "1.0"
anyhow = "1.0"

[lib]
path = "src/lib.rs"
