[package]
name = "dial"
version = "0.1.0"
authors = ["Ryan Faulhaber <ryf@sent.as>"]
edition = "2018"

[lib]
name = "dial"
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.1"
thiserror = "1.0"
anyhow = "1.0"
num = "0.3"

[dev-dependencies]
pretty_assertions = "0.6.1"